<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="heroes">Heroes</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="team_logo">team logo</string>
    <string name="name">Name</string>
    <string name="search_by_name_or_real_name">Search By Name or Real Name</string>
    <string name="confirmed">Confirmed</string>
    <string name="date">Date</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="figures_are_respective_to_cumulative_data">Figures are respective to cumulative data</string>
    <string name="real_name">Real Name</string>
    <string name="figures_are_respective_to_one_day_only">Figures are respective to one day only</string>

    <string-array name="ratingValues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="teamAffiliation">
        <item>Avengers</item>
        <item>Justice League</item>
        <item>X-Men</item>
        <item>Fantastic Four</item>


    </string-array>
</resources>